--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Architects+Daughter);
+@import 'variables';
 @import 'functions';
 
-$clock : 300px;
 
 *{
 	border: 0;
@@ -17,8 +17,124 @@ html{
 }
 
 body{
-	@include gradient(radial, (#aaa, #ddd));
+	@include gradient(radial, ($gray, $light_gray));
 	position: relative;
+
+	&.theme2{
+		.clock{
+			border-color: $dark_blue ;
+
+			.point,
+			.seconds{		
+				background: $dark_blue ;		
+			}
+
+			.config{
+
+				&:hover{
+					background: $dark_blue;
+				}
+
+				.submenu{
+
+					ul{
+
+						li{
+
+							&.active,
+							&:hover{
+								background: $dark_blue;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		.current_date{
+
+			span{
+				color: $dark_blue;
+			}
+		}
+	}
+
+	&.theme3{
+		.clock{
+			border-color: $dark_green;
+
+			.point,
+			.seconds{		
+				background: $dark_green;		
+			}
+
+			.config{
+
+				&:hover{
+					background: $dark_green;
+				}
+
+				.submenu{
+
+					ul{
+
+						li{
+
+							&.active,
+							&:hover{
+								background: $dark_green;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		.current_date{
+
+			span{
+				color: $dark_green;
+			}
+		}
+	}
+	&.theme4{
+		.clock{
+			border-color: $dark_orange;
+
+			.point,
+			.seconds{		
+				background: $dark_orange;		
+			}
+
+			.config{
+
+				&:hover{
+					background: $dark_orange;
+				}
+
+				.submenu{
+
+					ul{
+
+						li{
+
+							&.active,
+							&:hover{
+								background: $dark_orange;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		.current_date{
+
+			span{
+				color: $dark_orange;
+			}
+		}
+	}
 }
 
 .main{
@@ -32,21 +148,22 @@ body{
 }
 
 .clock{
-	border: solid ($clock / 30 + 5) #c62828 ;
+	border: solid ($clock / 30 + 5) $dark_red ;
 	max-width: $clock;
 	width: $clock;
 	min-height: $clock;
 	position: relative;
-	@include gradient(radial, (#fff, #FFF));
+	@include gradient(radial, ($white, $white));
 	@include box-sizing(border-box);
 	@include border-radius(50%);
+	@include transition(all 1s ease);
 	@include box-shadow((0 0 15px 1px rgba(0,0,0,.7), 0 0 4px 1px rgba(0,0,0,.7) inset));
 
 	&:after{
 		position: absolute;
 		@include border-radius(50%);
 		content: '';
-		border: dotted 2px #111;
+		border: dotted 2px $black;
 		top: 0;
 		left: 0;
 		right: 0;
@@ -60,18 +177,17 @@ body{
 	.point{
 		width: ($clock / 10);
 		height: ($clock / 10);
-		background: #c62828;
+		background: $dark_red;
 		z-index: 2;
 		@include border-radius(50%);
 		@include transform(scale(.4));
-		@include box-shadow(2px 2px 6px #111);
-	}
-
-	
+		@include box-shadow(2px 2px 6px $black);
+		@include transition(all 1s ease);
+	}  
 	.minutes{
 		height: ($clock / 3 - 10);
 		width: 4px;
-		background: #323232;
+		background: $black;
 		z-index: 1;
 		@include transform(translate3D(0, -50%, 0));
 		@include transform-origin(bottom center);
@@ -80,7 +196,7 @@ body{
 	.hours{
 		height: ($clock / 3 - 40);
 		width: 4px;
-		background: #323232;
+		background: $black;
 		z-index: 1;
 		@include transform(translate3D(0, -50%, 0));
 		@include transform-origin(bottom center);
@@ -88,12 +204,13 @@ body{
 	}
 	.seconds{
 		height: ($clock / 3 );
-		width: 1px;
-		background: #c62828;
+		width: 2px;
+		background: $dark_red;
 		z-index: 2;
 		@include transform(translate3D(0, -50%, 0));
 		@include transform-origin(bottom center);
 		@include border-radius(50% 50% 0 0);
+		@include transition((color 1s ease));
 	}
 
 	.point,
@@ -128,9 +245,9 @@ body{
 			height: 35px;
 			font-size: $clock / 10 + 4;
 			font-weight: bold;
-			color: #323232;
+			color: $black;
 			z-index: 1;
-			background: white;
+			background: $white;
 			font-family: 'Architects Daughter', cursive;
 
 			&._12{
@@ -160,12 +277,73 @@ body{
 			}
 		}
 	}
+
+	.config{
+		position: absolute;
+		max-width: 50px;
+		top: -30px;
+		left: -100px;
+		cursor: pointer;
+		background: $white;
+		z-index: 5;
+		padding: .7rem .7rem .5rem;
+		@include transition(all .5s ease);
+		@include border-radius(50%);
+
+		&:hover{
+			background: $dark_red;
+			@include box-shadow(0 0 5px #111);
+
+			.submenu{
+				width: 80px;
+				height: 115px;
+			}
+
+			img{
+				@include animation(rotate 5s infinite linear);
+			}
+		}
+
+		img{
+			max-width: 100%;
+		}
+
+		.submenu{
+			position: absolute;
+			left: 60%;
+			background: $white;
+			top: 60%;
+			overflow: hidden;
+			width: 0;
+			height: 0;
+			@include border-radius(5px);
+			@include transition((width .25s ease, height .15s .2s ease));
+			@include box-shadow(0 0 5px #111);
+
+			ul{
+				list-style: none;
+
+				li{
+					padding: .25rem;
+					text-align: center;
+					@include transition(all 1s ease);
+
+					&.active,
+					&:hover{
+						background: $dark_red;
+						color: white;
+						text-shadow: 0 0 2px $black;
+					}
+				}
+			}
+		}
+	}
 }
 
 .current_date{
 	position:  absolute;
 	top:  15px;
-	background: #fefefe;
+	background: $white;
 	padding: .51rem 0;
 	margin: auto;
 	left: 0px;
@@ -180,10 +358,23 @@ body{
 
 	span{
 		font-weight: normal;
-		color: #c62828;
+		color: $dark_red;
+		@include transition(color 1s ease);
 	}
 
 	h1,span{
 		font-size: 13px;
 	}
+}
+
+
+// keyframes
+@keyframes rotate{
+	0%, 100%{ @include transform(scale(1) rotate(0));}
+	50%{ @include transform(scale(.7)  rotate(360deg));}
+}
+
+@-webkit-keyframes rotate{
+	0%, 100%{ @include transform(scale(1) rotate(0));}
+	50%{ @include transform(scale(.7)  rotate(360deg));}
 }
