--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -127,6 +127,25 @@ body {
     width: 80%;
     z-index: 0;
     height: 80%; }
+  .clock:before {
+    position: absolute;
+    top: 120%;
+    left: 0;
+    content: '';
+    width: 100%;
+    min-height: 50px;
+    background-image: -webkit-radial-gradient(#111, transparent, transparent);
+    background-image: -khtml-radial-gradient(#111, transparent, transparent);
+    background-image: -moz-radial-gradient(#111, transparent, transparent);
+    background-image: -ms-radial-gradient(#111, transparent, transparent);
+    background-image: -o-radial-gradient(#111, transparent, transparent);
+    background-image: radial-gradient(#111, transparent, transparent);
+    -webkit-transform: rotatex(75deg);
+    -khtml-transform: rotatex(75deg);
+    -moz-transform: rotatex(75deg);
+    -ms-transform: rotatex(75deg);
+    -o-transform: rotatex(75deg);
+    transform: rotatex(75deg); }
   .clock .point {
     width: 30px;
     height: 30px;
